Fix chapter heading aligned

--- a/assets/stylesheets/components/sections.css.scss
+++ b/assets/stylesheets/components/sections.css.scss
@@ -64,6 +64,7 @@
   h1.section-title {
     font-weight: 300;
     font-size: 2.5em;
+    text-align: left;
   }
 }
 
